  - Fixed code for ntfs symlinks (they have to be recreated as normal files and dirs + special attributes)
  - Changed the requirement from ntfs3g-AR (advanced release) to ntfs3g >= 20091114 (standard release) for ntfs
  - Improvements and fixes in the autotools build chain files (contribution from Michael Biebl)
  - Detabified the sources: find . -iname "*.[ch]" -exec sed -i -e "s/[\t]/    /g" -e 's!{    !{   !g' {} \;
* 0.6.1 (2009-10-04):
  - New encryption implementation was not thread-safe (broken when option -j was used)
  - Dropped openssl support (this code was disabled in fsarchiver-0.6.0 anyway)
* 0.6.0 (2009-09-27):
  - Debianized fsarchiver (added the debian directory necessary to build the debian package)
  - Rewrote the encryption support using libgcrypt instead of openssl (fix licensing issues)
  - Added the manpage written by Ilya Barygin (it will be installed by "make install")
* 0.5.9 (2009-08-29):
  - Fixed 'fsarchiver probe' which ignored /dev/dm-0 (first device mapper disk)
  - It now displays NTFS uuids in the archive information ("fsarchive archinfo archive.fsa")
  - Support for "system.ntfs_times" attribute supported by ntfs-3g >= 2009.4.4AR.17
  - Support for "system.ntfs_dos_name" attribute supported by ntfs-3g >= 2009.4.4AR.17
  - Support for "user.ntfs.efsinfo" attribute which allows to copy and restore encrypted files
  - Improved detection for ntfs-3g-AR and print a more explicit message if inappropriate version found
  - Added info about the minimum fsarchiver version required in the archive to allow doing checks at restfs
  - Added FSYSHEADKEY_MOUNTINFO in the fsheader to allow changing the ntfs-3g streams_interface in the future
* 0.5.8 (2009-07-12):
  - Preserve UUID with ntfs filesystems (64bit number written in boot sector at offset 0x48)
  - Fixed "fsarchiver probe": partitions having a 0 at the end of their number were ignored
  - Added distributions support files in the sources (ebuild script for gentoo, spec for rpm)