@@ -92,6 +92,9 @@ Allow to save a filesystem which is mounted in read-write (live backup).
 .B -a
 Allow to run savefs when partition is mounted without the acl/xattr options.
 .TP
+.BI "-L " label
+set the label of the archive: it's just a comment about the contents
+.TP
 .BI "-z " level
 Valid compression levels are between 1 (very fast) and 9 (very good).
 .TP
